<resources>
    <string name="app_name">Workoaching</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_routines">Popular Routines</string>
    <string name="activity_search_name">Search</string>
    <string name="activity_search_header">Browse All</string>
    <string name="activity_category_header">Browse Category</string>
    <string name="activity_user_bar">User Profile</string>
    <string name="name_field">Name</string>
    <string name="lastname_field">Last Name</string>
    <string name="email_field">Email</string>
    <string name="phone_field">Phone (Optional)</string>
    <string name="login_header">Login</string>
    <string name="register_header">Register</string>
    <string name="password_field">Password</string>
    <string name="confirmpassword_field">Confirm Password</string>
    <string name="loginquestion_field">Don\'t you have an account? Register</string>
    <string name="activity_routine_details_header">Routine Details</string>
    <string name="activity_routine_details_text">Exercise List</string>
    <string name="new_routines">Recent Routines</string>
    <string name="currentpassword_field">Current Password</string>
    <string name="newpassword_field">New Password</string>
    <string name="changepassword_btn">Change Password</string>
    <string name="secondlastname_field">Second Last Name (Optional)</string>
    <string name="error_email_field">Invalidad email address</string>
    <string name="error_name_field">Please don\'t let this field empty</string>
    <string name="error_password_field">Please introduce a password with one digit, a lower case letter, an upper case letter and at least eight characters</string>
    <string name="error_no_match_password">The passwords are not equal</string>
    <string name="empty_field">This field is required</string>
    <string name="logout">Log out</string>
    <string name="my_routines_tabs_my_routines">My Routines</string>
    <string name="my_routines_tabs_favorites">Favorites Routines</string>
    <string name="user_tabs_account_details">Account Details</string>
    <string name="user_tabs_my_progress">My Progress</string>
    <string name="public_user_tabs_routines">User Routines</string>
    <string name="public_user_tabs_images">Progress Images</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="edit_routine">Edit Routine</string>
    <string name="image_delete_success">The image was deleted successfully</string>
    <string name="image_delete_failure">An error has ocurred while deleting image</string>
    <string name="image_delete_confirm">Do you really want to delete this image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="image_delete">Delete Image</string>
    <string name="routine_delete_sucess">The routine was deleted successfully</string>
    <string name="routine_delete_failure">An error has ocurred while deleting routine</string>
    <string name="routine_delete_confirm">Do you really want to delete this routine?</string>
    <string name="routine_delete">Delete Routine</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_create">Create Routine</string>
    <string name="bottom_menu_routines">My Routines</string>
    <string name="create_your_routine">Create your routine</string>
    <string name="select_your_exercises">Select your exercises for each section</string>
    <string name="chest_exercises">Chest exercises</string>
    <string name="abs_exercises">Abs exercises</string>
    <string name="shoulder_exercises">Shoulder exercises</string>
    <string name="arm_exercises">Arm exercises</string>
    <string name="back_exercises">Back exercises</string>
    <string name="series">Series</string>
    <string name="adjust_series">Adjust your series and repetitions</string>
    <string name="create_routine">Create routine</string>
    <string name="repetitions">Repetitions</string>
    <string name="select_one_exercise">Select at least one exercise</string>
    <string name="routine_name">Routine name</string>
    <string name="routine_added">Routine added with success</string>
    <string name="exercise_name">Routine name</string>
    <string name="apply_changes">Apply changes</string>
    <string name="routine_updated">Routine updated succesfully</string>
    <string name="offline_routines_added">Your routines were added succesfully</string>
    <string name="check_internet_conection">Unable to connect. Check your internet conection.</string>
    <string name="routine_added_offline">Your routine will be added once you recover your internet connection</string>
    <string name="search_by_title">Search by title</string>
    <string name="filter_by_letter">A-Z</string>
    <string name="filter_by_letter_upside">Z-A</string>
    <string name="filter_word">Filter</string>
    <string name="made_by">Made by</string>
    <string name="image_add">Add Image</string>
    <string name="image_add_confirm">The selected image will be added to user progres images. Do you really want to do it?</string>
    <string name="image_change">Change Image</string>
    <string name="image_change_confirm">The selected image will be the profile picture, Do you really want to change it?</string>
</resources>