<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.UserProfileFields">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentpassword_field"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/currentpassword_field"
            android:inputType="textPassword"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newpassword_field"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/newpassword_field"
            android:inputType="textPassword"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmpassword_field"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/confirmpassword_field"
            android:inputType="textPassword"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_gravity="center"
            android:text="@string/changepassword_btn"
             />


    </LinearLayout>

</ScrollView>