<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.186">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/curva_login4" >


            </ImageView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_field"
                    android:textColor="@color/primary_red" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary_red"
                    android:ems="10"
                    android:hint="@string/name_field"
                    android:inputType="textPersonName"
                    android:textColor="@color/primary_red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname_field"
                    android:textColor="@color/primary_red" />

                <EditText
                    android:id="@+id/editTextLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary_red"
                    android:ems="10"
                    android:hint="@string/lastname_field"
                    android:inputType="textPersonName"
                    android:textColor="@color/primary_red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secondlastname_field"
                    android:textColor="@color/primary_red" />

                <EditText
                    android:id="@+id/editTextSecondLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary_red"
                    android:ems="10"
                    android:hint="@string/secondlastname_field"
                    android:inputType="textPersonName"
                    android:textColor="@color/primary_red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_field"
                    android:textColor="@color/primary_red" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary_red"
                    android:ems="10"
                    android:hint="@string/email_field"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primary_red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_field"
                    android:textColor="@color/primary_red" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/primary_red"
                    android:ems="10"
                    android:hint="@string/phone_field"
                    android:inputType="phone"
                    android:textColor="@color/primary_red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_field"
                    android:textColor="@color/primary_red"
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"

                    android:backgroundTint="@color/primary_red"
                    android:ems="10"
                    android:hint="@string/password_field"
                    android:inputType="textPassword"
                    android:textColor="@color/primary_red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirmpassword_field"
                    android:textColor="@color/primary_red"
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary_red"
                    android:ems="10"
                    android:hint="@string/confirmpassword_field"
                    android:inputType="textPassword"
                    android:textColor="@color/primary_red" />
                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/register_header"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>