<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/create_your_routine"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/adjust_series"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"/>


        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/adjustExercisesRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarFadeDuration="@integer/material_motion_duration_long_1"
            android:scrollbarStyle="insideOverlay"
            android:scrollbarThumbVertical="@color/primary_red"
            android:scrollbars="vertical"
          >
            
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/createRoutineButton"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/create_routine"
        android:textSize="20sp">

    </Button>
</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>