<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_routine"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white">

        </TextView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/routine_name"
            android:textSize="25sp"
            android:textColor="@color/white">

        </TextView>
        <EditText
            android:textColor="@color/white"
            android:id="@+id/routineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="15dp">

        </EditText>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/editRoutineRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            tools:listitem="@layout/exercise_series_card_layout">

        </androidx.recyclerview.widget.RecyclerView>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/applyChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/apply_changes"
            android:textSize="16sp"></Button>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>