<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:background="@color/dark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:paddingTop="5dp"
            android:id="@+id/txtHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:text="Titulo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="parent" />
        <ImageView
            android:id="@+id/categoryImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">


  <EditText
      android:id="@+id/searchText"


      android:drawableLeft="@drawable/ic_search_24"
      android:drawableTint="@color/primary_red"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/input_search"
      android:hint="@string/search_by_title"
      android:textColorHint="@color/primary_red"
      android:layout_marginBottom="10dp"
      android:textColor="@color/primary_red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/filter_word"
      android:layout_gravity="center"
      android:textColor="@color/white"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_gravity="center"
            android:layout_height="20dp"
            android:src="@drawable/ic_baseline_filter_alt_24"
            android:layout_marginRight="10dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <CheckBox
            android:id="@+id/orderedAzRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_letter"

            android:paddingHorizontal="50sp"
            android:textColor="@drawable/radio_text"
            android:button="@android:color/transparent"
            android:elevation="60dp"
            android:background="@drawable/radio_selector"
            android:layout_marginRight="10dp"/>
        <CheckBox
            android:id="@+id/orderedZaRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_letter_upside"
            android:paddingHorizontal="50sp"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/radio_text"
            android:button="@android:color/transparent"
            android:layout_marginRight="10dp">

        </CheckBox>
    </RadioGroup>

    </LinearLayout>
</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRoutineCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fadeScrollbars="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarFadeDuration="@integer/material_motion_duration_long_1"
        android:scrollbarStyle="insideOverlay"
        android:scrollbarThumbVertical="@color/primary_red"
        android:scrollbars="vertical"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/primary_red"

        />

</LinearLayout>