<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.HomeFragment">
    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="100dp">
        <LinearLayout
            android:id="@+id/homeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:id="@+id/txtRutinasPopulares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/popular_routines"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary_red"
                />




        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/txtNuevasRutinas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/new_routines"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNuevasRutinas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>


            <ProgressBar
                android:id="@+id/progressBar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:layout_gravity="center"
                android:indeterminateTint="@color/primary_red"

                />





        </LinearLayout>


        <LinearLayout
            android:id="@+id/homeOfflineContainer"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">



            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:src="@drawable/no_internet_">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_internet_conection"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>

            </LinearLayout>
        </LinearLayout>






</ScrollView>

